classDiagram
    class CommentController {
        -CommentService commentService
        +createComment()
        +updateComment()
        +deleteComment()
        +likeComment()
        +getPostComments()
        +hideComment()
    }

    class CommentService {
        -CommentRepository commentRepository
        -CommentLikeRepository commentLikeRepository
        -PostClient postClient
        -RabbitTemplate rabbitTemplate
        +create()
        +update()
        +delete()
        +like()
        +listByPost()
        +hide()
    }

    class PostClient {
        +getMeta(postId) ApiResponse~PostMetaResponse~
    }

    class CommentRepository {
        +findByPostIdOrderByCreatedAtDesc()
        +findById()
    }

    class CommentLikeRepository {
        +findByCommentIdAndUserId()
        +deleteByCommentIdAndUserId()
    }

    class Comment {
        +UUID commentId
        +UUID postId
        +UUID authorId
        +String authorName
        +UUID parentCommentId
        +String content
        +long likesCount
        +CommentStatus status
    }

    class CommentLike {
        +UUID likeId
        +UUID commentId
        +UUID userId
    }

    CommentController --> CommentService
    CommentService --> CommentRepository
    CommentService --> CommentLikeRepository
    CommentService --> PostClient : "Feign"
    CommentService ..> RabbitMQ : "comment.new / comment.reply"
    CommentRepository --> Comment
    CommentLikeRepository --> CommentLike
